--- a/mappers/5-class.yaml
+++ b/mappers/5-class.yaml
@@ -1,24 +1,46 @@
-g11: cancer
-g14: polyp
-g18: ulcer
-g19: ulcer
-g26: cancer
-g31: polyp
-g39: cancer 
-g45: polyp
-g50: ulcer
-g51: ulcer
-g52: ulcer
-c02: blood
-c05: cancer
-c22: polyp
-c26: ulcer
-c27: ulcer
-h01: normal
-h02: normal
-h03: normal
-h05: normal
-h06: normal
-h07: normal
-b01: blood
-b02: normal
+polyp:
+  classes:
+    - c22
+    - g14
+    - g31
+    - g45
+  healthy: false
+cancer:
+  classes:
+    - c05
+    - g11
+    - g26
+    - g39
+  healthy: false
+ulcer:
+  classes:
+    - c26
+    - c27
+    - c32
+    - g18
+    - g19
+    - g50
+    - g51
+    - g52
+  healthy: false
+blood:
+  classes:
+    - b01
+    - c02
+    - c05
+    - g05
+    - g08
+    - g19
+    - g39
+    - g51
+  healthy: false
+normal:
+  classes:
+    - h01
+    - h02
+    - h03
+    - h05
+    - h06
+    - h07
+    - b02
+  healthy: true
